# qt-material

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  fix_readme.py  resource_rc.py
docs/source/: conf.py
docs/source/_modules/: qt_material.rst
docs/source/notebooks/: readme.ipynb  readme.rst
examples/: bare_minimum.py
examples/exporter/: exporter.py  sss.py
examples/full_features/: generator.py  main.py
examples/runtime/: custom_css.py  extra.py  runtime.py  runtime_dock.py  runtime_menu.py
examples/ui/: show_ui.py
src/qt_material/: __init__.py  dock_theme.ui  material.css.template  qt_style_tools.py
src/qt_material/resources/: __init__.py
src/qt_material/themes/: dark_lightgreen.xml  dark_pink.xml  dark_yellow.xml  light_amber.xml  light_blue_500.xml  light_orange.xml  light_purple_500.xml  light_red_500.xml  light_teal.xml  light_teal_500.xml  light_yellow.xml
src/qt_material6/: __init__.py  qt_style_tools.py
src/qt_material6/resources/: generate.py
src/qt_material6/themes/: dark_amber.xml  dark_blue.xml  dark_cyan.xml  dark_medical.xml  dark_purple.xml  dark_red.xml  dark_teal.xml  light_blue.xml  light_cyan.xml  light_cyan_500.xml  light_lightgreen.xml  light_lightgreen_500.xml  light_pink.xml  light_pink_500.xml  light_purple.xml
